<resources>
    <string name="app_name">Portfolio</string>

  <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
  <string name="action_settings">Settings</string>
  <string name="name">Jaspr Wang</string>
  <string name="easter_egg">你们给我搞得这个彩蛋啊</string>
  <string name="info_title">Info</string>
  <string name="experiences_title">Experiences</string>
  <string name="works_title">Works</string>
  <string name="recent_title">Portfolio</string>
  <string name="work_title_1">work 1</string>
  <string name="work_description_1">work description work description work description work description work description</string>
  <string name="work_title_2">work 2</string>
  <string name="work_description_2">work description work description work description work description work description</string>
  <string name="work_title_3">work 3</string>
  <string name="work_description_3">work description work description work description work description work description</string>

</resources>